--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <h1>WenTian Play<h1> <!--- Server Name -->
             <p>文天玩</p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
-                <a href="http://web.wentianplay.com"><button class="btn1"><i class="fab fa-discord"></i>  文天玩直通站</button></a>
-                <a href="https://www.wentianplay.com"><button class="btn3"><i class="fas fa-poll"></i> 文天玩</button></a>
-                <a href="http://wtp.wentianplay.com"><button class="btn1"><i class="fab fa-discord"></i>  文天玩备用直通站</button></a>
+                <a href="http://web.wentianplay.com"><button class="btn1"><i class="fab fa-discord"></i>  直通站</button></a>
+                <a href="https://www.wentianplay.com"><button class="btn3"><i class="fas fa-poll"></i> 文天玩WenTian Play</button></a>
+                <a href="http://wtp.wentianplay.com"><button class="btn1"><i class="fab fa-discord"></i>  备用直通站</button></a>
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="https://iso.wentianplay.com"><button class="btn3"><i class="fas fa-poll"></i> 映像站[正在揩建中...]</button></a>
             <div class="animate__animated animate__bounceIn animate__delay-1s">
