--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <a href="https://www.wentianplay.com"><button class="btn3"><i class="fas fa-poll"></i> 文天玩</button></a>
                 <a href="http://wtp.wentianplay.com"><button class="btn1"><i class="fab fa-discord"></i>  备用直通站</button></a>
             <div class="animate__animated animate__bounceIn animate__delay-1s">
-                <a href="https://iso.wentianplay.com"><button class="btn3"><i class="fas fa-poll"></i> 映像站[正在揩建中...]</button></a>
+                <a href="https://io.wentianplay.com"><button class="btn3"><i class="fas fa-poll"></i> 映像站</button></a>
             <div class="animate__animated animate__bounceIn animate__delay-1s">
-                <a href="https://wwo.lanzouj.com/b00b43dw7c"><button class="btn3"><i class="fas fa-poll"></i> 映像站(蓝奏云盘版) 密码:bqdu</button></a>
+                <a href="https://wwo.lanzouj.com/b00b43dw7c"><button class="btn3"><i class="fas fa-poll"></i> 备用映像站 密码:bqdu</button></a>
             </div>
         </div>
     </div>
