--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="https://io.wentianplay.com"><button class="btn3"><i class="fas fa-poll"></i> 映像站</button></a>
             <div class="animate__animated animate__bounceIn animate__delay-1s">
-                <a href="https://wwo.lanzouj.com/b00b43dw7c"><button class="btn3"><i class="fas fa-poll"></i> 备用映像站 密码:bqdu</button></a>
+                <a href="https://wwo.lanzouj.com/b00b43dw7c"><button class="btn3"><i class="fas fa-poll"></i> 备用映像站 密码:8956</button></a>
             </div>
         </div>
     </div>
